Add vendor libs

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Tracker Slacker</title>
-    <script src="https://cdn.jsdelivr.net/npm/muuri@0.9.5/dist/muuri.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/web-animations-js@2.3.2/web-animations.min.js"></script>
+    <script src="vendor/muuri.min.js"></script>
+    <script src="vendor/web-animations.min.js"></script>
     <link rel="stylesheet" href="styles.css" />
     <script type="text/javascript" src="main.js"></script>
   </head>
