Automatically move cards

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="main.js"></script>
   </head>
   <body>
+    <button id="btn-plan">Plan a task!</button>
+    <button id="btn-work">Complete a task</button>
     <div class="board">
       <div class="board-column">
         <div class="column-title">Todo</div>
