Button to add new items

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="main.js"></script>
   </head>
   <body>
+    <button id="btn-todo">New task</button>
     <button id="btn-plan">Plan a task!</button>
     <button id="btn-work">Complete a task</button>
     <div class="board">
