--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="board">
       <div class="board-column">
-        <div class="column-title">Todo</div>
+        <div class="column-title">Backlog</div>
         <div class="column">
           <div class="item">
             <div class="item-content">This can be anything.</div>
@@ -26,7 +26,7 @@
       </div>
 
       <div class="board-column">
-        <div class="column-title">In progress</div>
+        <div class="column-title">Todo</div>
         <div class="column">
           <div class="item">
             <div class="item-content">some other card</div>
@@ -36,6 +36,11 @@
             <div class="item-content">And again</div>
           </div>
         </div>
+      </div>
+
+      <div class="board-column">
+        <div class="column-title">In progress</div>
+        <div class="column"></div>
       </div>
 
       <div class="board-column">
