--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
     <div class="board">
       <div class="board-column">
         <div class="column-title">Backlog</div>
-        <div class="column">
-          <div class="item">
-            <div class="item-content">This can be anything.</div>
-          </div>
+        <div class="column-wrap">
+          <div class="column">
+            <div class="item">
+              <div class="item-content">This can be anything.</div>
+            </div>
 
-          <div class="item">
-            <div class="item-content">
-              <div class="my-custom-content">Yippee!</div>
+            <div class="item">
+              <div class="item-content">
+                <div class="my-custom-content">Yippee!</div>
+              </div>
             </div>
           </div>
         </div>
@@ -27,25 +29,31 @@
 
       <div class="board-column">
         <div class="column-title">Todo</div>
-        <div class="column">
-          <div class="item">
-            <div class="item-content">some other card</div>
-          </div>
+        <div class="column-wrap">
+          <div class="column">
+            <div class="item">
+              <div class="item-content">some other card</div>
+            </div>
 
-          <div class="item">
-            <div class="item-content">And again</div>
+            <div class="item">
+              <div class="item-content">And again</div>
+            </div>
           </div>
         </div>
       </div>
 
       <div class="board-column">
         <div class="column-title">In progress</div>
-        <div class="column"></div>
+        <div class="column-wrap">
+          <div class="column"></div>
+        </div>
       </div>
 
       <div class="board-column">
         <div class="column-title">Done!</div>
-        <div class="column"></div>
+        <div class="column-wrap">
+          <div class="column"></div>
+        </div>
       </div>
     </div>
   </body>
