Add viewport for mobile

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Tracker Slacker</title>
+
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+
     <script src="vendor/muuri.min.js"></script>
     <script src="vendor/web-animations.min.js"></script>
     <link rel="stylesheet" href="styles.css" />
