Keep track of completed items

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
   </head>
   <body>
     <div class="board">
+      <div class="counter"><strong id="num-bugs"></strong> active bugs</div>
+      <div class="counter">
+        <strong id="num-feat"></strong> features implemented
+      </div>
+      <br />
       <div class="board-column">
         <div class="column-title">Backlog</div>
         <div class="column-wrap">
