--- a/index.html
+++ b/index.html
@@ -21,32 +21,14 @@
       <div class="board-column">
         <div class="column-title">Backlog</div>
         <div class="column-wrap">
-          <div class="column">
-            <div class="item">
-              <div class="item-content">This can be anything.</div>
-            </div>
-
-            <div class="item">
-              <div class="item-content">
-                <div class="my-custom-content">Yippee!</div>
-              </div>
-            </div>
-          </div>
+          <div class="column"></div>
         </div>
       </div>
 
       <div class="board-column">
         <div class="column-title">Todo</div>
         <div class="column-wrap">
-          <div class="column">
-            <div class="item">
-              <div class="item-content">some other card</div>
-            </div>
-
-            <div class="item">
-              <div class="item-content">And again</div>
-            </div>
-          </div>
+          <div class="column"></div>
         </div>
       </div>
 
@@ -60,7 +42,13 @@
       <div class="board-column">
         <div class="column-title">Done!</div>
         <div class="column-wrap">
-          <div class="column"></div>
+          <div class="column">
+            <div class="item">
+              <div class="item-content">
+                <strong>TICK-0000</strong><br />Initial Release
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
