Added task size and assignments

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="counter">
         <strong id="num-feat"></strong> features implemented
       </div>
+      <div class="counter" id="team-members"></div>
       <br />
       <div class="board-column">
         <div class="column-title">Backlog</div>
@@ -45,7 +46,9 @@
           <div class="column">
             <div class="item">
               <div class="item-content">
-                <strong>TICK-0000</strong><br />Initial Release
+                <strong>TICK-0000</strong>
+                <div class="item-assignment item-assigned">X</div>
+                <br />Initial Release
               </div>
             </div>
           </div>
