Style complexity and type

--- a/index.html
+++ b/index.html
@@ -46,9 +46,15 @@
           <div class="column">
             <div class="item">
               <div class="item-content">
-                <strong>TICK-0000</strong>
-                <div class="item-assignment item-assigned">X</div>
-                <br />Initial Release
+                <p><strong>LDJ-0</strong><br />Initial Release</p>
+                <div class="item-assignment" style="background-color: #333">
+                  LD
+                </div>
+                <!-- <div class="item-number">ld-0</div> -->
+                <div class="item-type item-type-task">•</div>
+                <!-- <div class="item-type item-type-feat">+</div> -->
+                <!-- <div class="item-type item-type-bug">!</div> -->
+                <div class="item-complexity">50</div>
               </div>
             </div>
           </div>
